[gd_scene load_steps=31 format=3 uid="uid://dlnitytscxewx"]

[ext_resource type="Script" path="res://scripts/mpplayer.gd" id="1_6ywoo"]
[ext_resource type="PackedScene" uid="uid://cqn6qgtemelvm" path="res://scen/gui/base_opt.tscn" id="2_f0wst"]
[ext_resource type="Texture2D" uid="uid://cpjqg3mbuwf3q" path="res://models/textures/Scene_-_Root_baseColor.png" id="2_th3kk"]
[ext_resource type="Theme" uid="uid://bg8fsepfigyn0" path="res://theme/base_opt.tres" id="3_jx4fy"]
[ext_resource type="Texture2D" uid="uid://d0m5lrby5nxdr" path="res://models/textures/Scene_-_Root_metallicRoughness.png" id="3_x1h5e"]
[ext_resource type="AudioStream" uid="uid://n57g5baj44a" path="res://audio/sfx/Footsteps/FootstepsStoneDirt1.wav" id="4_lvqym"]
[ext_resource type="Texture2D" uid="uid://buxtny31co066" path="res://models/textures/Scene_-_Root_normal.png" id="4_trlhs"]
[ext_resource type="AudioStream" uid="uid://ctrpvkoufalvn" path="res://audio/sfx/Footsteps/FootstepsStoneDirt2.wav" id="5_dmoer"]
[ext_resource type="Texture2D" uid="uid://varw4lx87ems" path="res://textures/1182467.160.webp" id="5_rrd7c"]
[ext_resource type="AudioStream" uid="uid://cis8w30cm46lq" path="res://audio/sfx/Footsteps/FootstepsStoneDirt3.wav" id="6_cx0fu"]
[ext_resource type="AudioStream" uid="uid://bp7oub08v01c0" path="res://audio/sfx/Footsteps/FootstepsStoneDirt4.wav" id="7_3w6mv"]
[ext_resource type="Script" path="res://scripts/map_sw.gd" id="8_pvhxo"]
[ext_resource type="AudioStream" uid="uid://erqx6phtv0fp" path="res://audio/music/Transferloop_-_drone_-_spaces.wav" id="8_vw82q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v4cbk"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0xdd3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jlef8"]
resource_name = "Scene_-_Root"
albedo_texture = ExtResource("2_th3kk")
metallic_texture = ExtResource("3_x1h5e")
metallic_texture_channel = 2
roughness_texture = ExtResource("3_x1h5e")
roughness_texture_channel = 1
normal_enabled = true
normal_texture = ExtResource("4_trlhs")

[sub_resource type="Animation" id="Animation_4ps3i"]
resource_name = "cam_go_shaking_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:h_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.055, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:v_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.045, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"footstep"
}]
}

[sub_resource type="Animation" id="Animation_jpkuy"]
resource_name = "cam_go_shaking_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:h_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.055, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:v_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.045, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"footstep"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fp5d2"]
_data = {
"cam_go_shaking_left": SubResource("Animation_4ps3i"),
"cam_go_shaking_right": SubResource("Animation_jpkuy")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w2r42"]
albedo_texture = ExtResource("5_rrd7c")
uv1_scale = Vector3(1.705, 1.705, 1.705)

[sub_resource type="GDScript" id="GDScript_xwmwt"]
script/source = "extends Button



func _on_pressed():
	Event.emit_signal(\"back_s\",1)
"

[sub_resource type="GDScript" id="GDScript_26y8o"]
script/source = "extends Button



func _on_pressed():
	Event.emit_signal(\"menu\")
"

[sub_resource type="Animation" id="Animation_lvddx"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/n-2-n/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/n-2-n/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xxrsi"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/n-2-n/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/n-2-n/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8e0y"]
_data = {
"fade_in": SubResource("Animation_lvddx"),
"fade_out": SubResource("Animation_xxrsi")
}

[sub_resource type="Animation" id="Animation_d8ouq"]
resource_name = "damag"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/playeranim_gui/ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.701961, 0, 0.207843, 0.509804), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8g1y3"]
_data = {
"damag": SubResource("Animation_d8ouq")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2ysn1"]
playback_mode = 1
random_volume_offset_db = 0.4
streams_count = 4
stream_0/stream = ExtResource("4_lvqym")
stream_1/stream = ExtResource("5_dmoer")
stream_2/stream = ExtResource("6_cx0fu")
stream_3/stream = ExtResource("7_3w6mv")

[sub_resource type="GDScript" id="GDScript_5dq31"]
script/source = "extends AudioStreamPlayer

#@onready var audio_stream_player = $\".\"
#
#func _on_finished():
	#audio_stream_player.playing = true
"

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_trvfa"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("animation_player:current_animation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Node3D:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:control_id")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
collision_layer = 3
script = ExtResource("1_6ywoo")

[node name="AudioListener3D" type="AudioListener3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_v4cbk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
layers = 65537
mesh = SubResource("CapsuleMesh_0xdd3")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_jlef8")

[node name="animation_player" type="AnimationPlayer" parent="."]
root_node = NodePath("../Node3D")
libraries = {
"": SubResource("AnimationLibrary_fp5d2")
}

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.947956, 0)

[node name="Camera3D" type="Camera3D" parent="Node3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.0757391, 0)
cull_mask = 983039

[node name="RayCast3D" type="RayCast3D" parent="Node3D/Camera3D"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, -0.00357184, -0.242808)
target_position = Vector3(0, 3, 0)
collision_mask = 4

[node name="hand" type="Node3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.420772, -0.157218, -0.694229)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Node3D"]
transform = Transform3D(0.445573, 0, 0.895246, 0, 1, 0, -0.895246, 0, 0.445573, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_w2r42")

[node name="Control_charapter" type="CanvasLayer" parent="."]
process_mode = 3
follow_viewport_enabled = true

[node name="ui_b" parent="Control_charapter" instance=ExtResource("2_f0wst")]
layer = 128
visible = false

[node name="back" type="Button" parent="Control_charapter/ui_b/Control" index="6"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -163.0
offset_top = 2.0
offset_right = -118.0
offset_bottom = 64.0
grow_horizontal = 0
scale = Vector2(2.12, 1)
size_flags_horizontal = 8
size_flags_vertical = 4
button_mask = 7
text = "back"
script = SubResource("GDScript_xwmwt")

[node name="menu2" type="Button" parent="Control_charapter/ui_b"]
top_level = true
visibility_layer = 15
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 62.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("3_jx4fy")
button_mask = 7
text = "menu"
script = SubResource("GDScript_26y8o")

[node name="CanvasLayer" type="CanvasLayer" parent="Control_charapter"]
layer = -1

[node name="n-2-n" type="AnimationPlayer" parent="Control_charapter/CanvasLayer"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_s8e0y")
}
script = ExtResource("8_pvhxo")

[node name="ColorRect" type="ColorRect" parent="Control_charapter/CanvasLayer/n-2-n"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="playeranim_gui" type="AnimationPlayer" parent="Control_charapter/CanvasLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8g1y3")
}

[node name="ColorRect2" type="ColorRect" parent="Control_charapter/CanvasLayer/playeranim_gui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="control_id" type="Label" parent="Control_charapter"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -173.0
offset_bottom = -124.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_jx4fy")
theme_override_font_sizes/font_size = 35

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_v4cbk")

[node name="footstep" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_2ysn1")
volume_db = 0.05
max_distance = 156.04
bus = &"SFX"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vw82q")
volume_db = 10.0
bus = &"music"
script = SubResource("GDScript_5dq31")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_trvfa")

[node name="name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8396, 0)
billboard = 2
fixed_size = true
text = "player"

[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Control_charapter/ui_b/Control/back" to="Control_charapter/ui_b/Control/back" method="_on_pressed"]
[connection signal="pressed" from="Control_charapter/ui_b/menu2" to="Control_charapter/ui_b/menu2" method="_on_pressed"]
[connection signal="animation_finished" from="Control_charapter/CanvasLayer/n-2-n" to="Control_charapter/CanvasLayer/n-2-n" method="_on_animation_finished"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="finished" from="footstep" to="footstep" method="_on_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_finished"]

[editable path="Control_charapter/ui_b"]
